--- a/views/branch-products.ejs
+++ b/views/branch-products.ejs
@@ -197,7 +197,20 @@
 							<span class="badge badge-count"></span>
 						</a>
 					</li>
-										<li class="nav-item">
+										
+      <li class="nav-item">
+        <a href="/customers">
+          <i class="fa-solid fa-users-viewfinder"></i>
+          <p>Customers</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/invoices">
+          <i class="fa-solid fa-file-invoice"></i>
+          <p>Invoices</p>
+        </a>
+      </li>
+<li class="nav-item">
 						<a href="/ledger/add">
 							<i class="fa-solid fa-book"></i>
 							<p>Ledger Entry</p>
