--- a/views/profit-loss.ejs
+++ b/views/profit-loss.ejs
@@ -211,7 +211,20 @@
           <p>Leave Mgmt</p>
         </a>
       </li>
+      
       <li class="nav-item">
+        <a href="/customers">
+          <i class="fa-solid fa-users-viewfinder"></i>
+          <p>Customers</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/invoices">
+          <i class="fa-solid fa-file-invoice"></i>
+          <p>Invoices</p>
+        </a>
+      </li>
+<li class="nav-item">
         <a href="/assets/add">
           <i class="fa-solid fa-box-archive"></i>
           <p>Add Asset</p>
