--- a/views/account-statement.ejs
+++ b/views/account-statement.ejs
@@ -82,7 +82,20 @@
 					<li class="nav-item"><a href="/admin/all-products"><i class="fa-solid fa-tarp"></i><p>All Products</p></a></li>
 					<li class="nav-item"><a href="/staff/add"><i class="fa-solid fa-user-plus"></i><p>Add Staff</p></a></li>
 					<li class="nav-item"><a href="/staff/all"><i class="fa-solid fa-users"></i><p>All Staff</p></a></li>
-					<li class="nav-item"><a href="/assets/add"><i class="fa-solid fa-box-archive"></i><p>Add Asset</p></a></li>
+					
+      <li class="nav-item">
+        <a href="/customers">
+          <i class="fa-solid fa-users-viewfinder"></i>
+          <p>Customers</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/invoices">
+          <i class="fa-solid fa-file-invoice"></i>
+          <p>Invoices</p>
+        </a>
+      </li>
+<li class="nav-item"><a href="/assets/add"><i class="fa-solid fa-box-archive"></i><p>Add Asset</p></a></li>
 					<li class="nav-item"><a href="/assets/all"><i class="fa-solid fa-boxes-stacked"></i><p>All Assets</p></a></li>
 					<li class="nav-item"><a href="/ledger/add"><i class="fa-solid fa-book"></i><p>Ledger Entry</p></a></li>
 					<li class="nav-item"><a href="/ledger/view"><i class="fa-solid fa-book-open"></i><p>View Ledger</p></a></li>
