--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -215,7 +215,20 @@
                             <p>All Staff</p>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    
+      <li class="nav-item">
+        <a href="/customers">
+          <i class="fa-solid fa-users-viewfinder"></i>
+          <p>Customers</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/invoices">
+          <i class="fa-solid fa-file-invoice"></i>
+          <p>Invoices</p>
+        </a>
+      </li>
+<li class="nav-item">
                         <a href="/assets/add">
                             <i class="fa-solid fa-box-archive"></i>
                             <p>Add Asset</p>
