--- a/views/invoices/details.ejs
+++ b/views/invoices/details.ejs
@@ -1,25 +1,112 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-
-<head>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>MaryBill Conglomerate Ltd. - Upload Product</title>
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
-		name='viewport' />
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-	<script src="https://kit.fontawesome.com/a207e207d8.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="/css/ready.css">
-	<link rel="stylesheet" href="/css/demo.css">
-	<link rel="icon" type="image/x-icon" href="/img/app_icon.ico">
-
-	<link rel="stylesheet" href="/iziToast-master/dist/css/iziToast.min.css">
-</head>
-
-<body>
-	<div class="wrapper">
-		<div class="main-header">
+  <head>
+    <title>Invoice Details</title>
+    <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no"
+      name="viewport"
+    />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    />
+    <script
+      src="https://kit.fontawesome.com/a207e207d8.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/css/ready.css" />
+    <link rel="stylesheet" href="/css/demo.css" />
+    <style>
+      .invoice-box {
+        max-width: 800px;
+        margin: auto;
+        padding: 30px;
+        border: 1px solid #eee;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+        font-size: 16px;
+        line-height: 24px;
+        font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+        color: #555;
+        background: white;
+      }
+      .invoice-box table {
+        width: 100%;
+        line-height: inherit;
+        text-align: left;
+      }
+      .invoice-box table td {
+        padding: 5px;
+        vertical-align: top;
+      }
+      .invoice-box table tr td:nth-child(2) {
+        text-align: right;
+      }
+      .invoice-box table tr.top table td {
+        padding-bottom: 20px;
+      }
+      .invoice-box table tr.top table td.title {
+        font-size: 45px;
+        line-height: 45px;
+        color: #333;
+      }
+      .invoice-box table tr.information table td {
+        padding-bottom: 40px;
+      }
+      .invoice-box table tr.heading td {
+        background: #eee;
+        border-bottom: 1px solid #ddd;
+        font-weight: bold;
+      }
+      .invoice-box table tr.details td {
+        padding-bottom: 20px;
+      }
+      .invoice-box table tr.item td {
+        border-bottom: 1px solid #eee;
+      }
+      .invoice-box table tr.item.last td {
+        border-bottom: none;
+      }
+      .invoice-box table tr.total td:nth-child(2) {
+        border-top: 2px solid #eee;
+        font-weight: bold;
+      }
+      @media only screen and (max-width: 600px) {
+        .invoice-box table tr.top table td {
+          width: 100%;
+          display: block;
+          text-align: center;
+        }
+        .invoice-box table tr.information table td {
+          width: 100%;
+          display: block;
+          text-align: center;
+        }
+      }
+      @media print {
+        .no-print {
+          display: none !important;
+        }
+        .sidebar,
+        .main-header {
+          display: none !important;
+        }
+        .main-panel {
+          width: 100% !important;
+        }
+        .content {
+          padding: 0 !important;
+        }
+        .invoice-box {
+          box-shadow: none;
+          border: 0;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="main-header">
 			<div class="logo-header">
 				<a href="/admin/dashboard" class="logo">
 					MaryBill Conglomerate
@@ -60,7 +147,7 @@
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">
 								<i class="la la-bell"></i>
-								<span class="notification">3</span>
+								<span class="notification"></span>
 							</a>
 							<ul class="dropdown-menu notif-box" aria-labelledby="navbarDropdown">
 								<li>
@@ -195,7 +282,7 @@
           <p>Dashboard</p>
         </a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a href="/admin/product-upload">
           <i class="fa-solid fa-upload"></i>
           <p>Upload Product</p>
@@ -256,7 +343,7 @@
           <p>Customers</p>
         </a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a href="/invoices">
           <i class="fa-solid fa-file-invoice"></i>
           <p>Invoices</p>
@@ -320,101 +407,98 @@
   </div>
 </div>
 <!-- End Sidebar -->
-		<div class="main-panel">
-			<div class="content">
-				<div class="container-fluid">
-					<h4 class="page-title"><span class="text-primary">Upload Product</span></h4>
-					<div class="row justify-content-center">
-						<div class="col-md-6">
-							<div class="card">
-								<form action="/admin/upload-product" method="POST">
-									<div class="card-header">
-										<div class="card-title">Fill in product details</div>
-									</div>
-									<div class="card-body">
-										<!-- Product name -->
-										<div class="form-group">
-											<label for="productName">Product Name</label>
-											<input type="text" class="form-control" id="productName" name="productName"
-												placeholder="Enter product name" required>
-										</div>
-										<!-- Wholesale cost price -->
-										<div class="form-group">
-											<label for="wholesaleCostPrice">Wholesale Cost Price</label>
-											<input type="number" class="form-control" id="wholesaleCostPrice" name="wholesaleCostPrice"
-												placeholder="0.00">
-										</div>
-										<!-- Wholesale selling price -->
-										<div class="form-group">
-											<label for="wholesaleSellingPrice">Wholesale Selling Price</label>
-											<input type="number" class="form-control" id="wholesaleSellingPrice" name="wholesaleSellingPrice"
-												placeholder="0.00">
-										</div>
-										<!-- Retail cost price -->
-										<div class="form-group">
-											<label for="retailCostPrice">Retail Cost Price</label>
-											<input type="number" class="form-control" id="retailCostPrice" name="retailCostPrice"
-												placeholder="0.00">
-										</div>
-										<!-- Retail selling price -->
-										<div class="form-group">
-											<label for="retailSellingPrice">Retail Selling Price</label>
-											<input type="number" class="form-control" id="retailSellingPrice" name="retailSellingPrice"
-												placeholder="0.00">
-										</div>
-										<!-- Product category -->
-										<div class="form-group">
-											<label for="category">Category</label>
-											<input type="text" class="form-control" id="category" name="category" placeholder="Enter Category"
-												required>
-										</div>
-										<!-- Product supplier -->
-										<div class="form-group">
-											<label for="supplier">Select Supplier</label>
-											<select class="form-control" id="supplier" name="supplierId" required>
-												<option value="">Select Supplier</option>
-												<% suppliers.forEach(supplier=> { %>
-													<option value="<%= supplier.supplier_id %>">
-														<%= supplier.name %>
-													</option>
-													<% }) %>
-											</select>
-										</div>
-									</div>
-									<div class="card-action">
-										<button class="btn btn-success">Submit</button>
-										<input class="btn btn-danger" type="reset">
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
+      <div class="main-panel">
+        <div class="content">
+          <div class="container-fluid">
+            <div class="row mb-3 no-print">
+              <div class="col-md-12">
+                <a href="/invoices" class="btn btn-secondary btn-sm"
+                  ><i class="fas fa-arrow-left"></i> Back to List</a
+                >
+                <button
+                  onclick="window.print()"
+                  class="btn btn-primary btn-sm float-right"
+                >
+                  <i class="fas fa-print"></i> Print Invoice
+                </button>
+              </div>
+            </div>
 
-				</div>
-			</div>
-		</div>
-	</div>
-	</div>
-
-	<%- include('./partials/responseMessage') %>
-
-</body>
-<script src="/js/core/jquery.3.2.1.min.js"></script>
-<script src="/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-<script src="/js/core/popper.min.js"></script>
-<script src="/js/core/bootstrap.min.js"></script>
-<script src="/js/plugin/chartist/chartist.min.js"></script>
-<script src="/js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js"></script>
-<!-- <script src="/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script> -->
-<script src="/iziToast-master/dist/js/iziToast.min.js"></script>
-<script src="/js/plugin/bootstrap-toggle/bootstrap-toggle.min.js"></script>
-<script src="/js/plugin/jquery-mapael/jquery.mapael.min.js"></script>
-<script src="/js/plugin/jquery-mapael/maps/world_countries.min.js"></script>
-<script src="/js/plugin/chart-circle/circles.min.js"></script>
-<script src="/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-<script src="/js/ready.min.js"></script>
-<!-- <script src="/js/demo.js"></script> -->
-
-<script src="/js/toast.js"></script>
-
+            <div class="invoice-box">
+              <table cellpadding="0" cellspacing="0">
+                <tr class="top">
+                  <td colspan="4">
+                    <table>
+                      <tr>
+                        <td class="title">
+                          MaryBill <br />
+                          Conglomerate
+                        </td>
+                        <td>
+                          Invoice #: <%= invoice.invoice_number %><br />
+                          Date: <%= new
+                          Date(invoice.invoice_date).toLocaleDateString() %><br />
+                          Due: <%= new
+                          Date(invoice.due_date).toLocaleDateString() %><br />
+                          Status:
+                          <span
+                            class="badge badge-<%= invoice.status === 'PAID' ? 'success' : 'warning' %>"
+                            ><%= invoice.status %></span
+                          >
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                <tr class="information">
+                  <td colspan="4">
+                    <table>
+                      <tr>
+                        <td>
+                          MaryBill Conglomerate<br />
+                          Nigeria.<br />
+                        </td>
+                        <td>
+                          <%= invoice.customer.name %><br />
+                          <%= invoice.customer.email %><br />
+                          <%= invoice.customer.phone %>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                <tr class="heading">
+                  <td>Item</td>
+                  <td style="text-align: center">Unit Price</td>
+                  <td style="text-align: center">Quantity</td>
+                  <td>Total</td>
+                </tr>
+                <% invoice.items.forEach(item => { %>
+                <tr class="item">
+                  <td><%= item.description %></td>
+                  <td style="text-align: center">
+                    ₦<%= parseFloat(item.unit_price).toLocaleString() %>
+                  </td>
+                  <td style="text-align: center">x<%= item.quantity %></td>
+                  <td>₦<%= parseFloat(item.total).toLocaleString() %></td>
+                </tr>
+                <% }) %>
+                <tr class="total">
+                  <td colspan="3"></td>
+                  <td>
+                    Total: ₦<%=
+                    parseFloat(invoice.total_amount).toLocaleString() %>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="/js/core/jquery.3.2.1.min.js"></script>
+    <script src="/js/core/popper.min.js"></script>
+    <script src="/js/core/bootstrap.min.js"></script>
+    <script src="/js/ready.min.js"></script>
+  </body>
 </html>
