--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -108,6 +108,18 @@
         </a>
       </li>
       <li class="nav-item">
+        <a href="/customers">
+          <i class="fa-solid fa-users-viewfinder"></i>
+          <p>Customers</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/invoices">
+          <i class="fa-solid fa-file-invoice"></i>
+          <p>Invoices</p>
+        </a>
+      </li>
+      <li class="nav-item">
         <a href="/assets/all">
           <i class="fa-solid fa-boxes-stacked"></i>
           <p>All Assets</p>
