--- a/views/payroll/run-payroll.ejs
+++ b/views/payroll/run-payroll.ejs
@@ -83,181 +83,9 @@
 				</div>
 			</nav>
 		</div>
-        <!-- Sidebar -->
-		 <div class="sidebar">
-  <div class="sidebar-wrapper">
-    <div class="user">
-      <div class="photo">
-        <img src="/img/profile-icon.png" />
-      </div>
-      <div class="info">
-        <a
-          class=""
-          data-toggle="collapse"
-          href="#collapseExample"
-          aria-expanded="true"
-        >
-          <span>
-            Steven
-            <span class="user-level">Administrator</span>
-            <span class="caret"></span>
-          </span>
-        </a>
-        <div class="clearfix"></div>
-
-        <div class="collapse in" id="collapseExample" aria-expanded="true">
-          <ul class="nav">
-            <li>
-              <a href="#profile">
-                <span class="link-collapse">My Profile</span>
-              </a>
-            </li>
-            <li>
-              <a href="#edit">
-                <span class="link-collapse">Edit Profile</span>
-              </a>
-            </li>
-            <li>
-              <a href="#settings">
-                <span class="link-collapse">Settings</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <ul class="nav">
-      <li class="nav-item">
-        <a href="/admin/dashboard">
-          <i class="fa-solid fa-gauge"></i>
-          <p>Dashboard</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/admin/product-upload">
-          <i class="fa-solid fa-upload"></i>
-          <p>Upload Product</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/admin/all-products">
-          <i class="fa-solid fa-tarp"></i>
-          <p>All Products</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/staff/add">
-          <i class="fa-solid fa-user-plus"></i>
-          <p>Add Staff</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/staff/all">
-          <i class="fa-solid fa-users"></i>
-          <p>All Staff</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/payroll/setup">
-          <i class="fa-solid fa-money-check-dollar"></i>
-          <p>Payroll Config</p>
-        </a>
-      </li>
-      <li class="nav-item active">
-        <a href="/payroll/run">
-          <i class="fa-solid fa-play"></i>
-          <p>Run Payroll</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/payroll/history">
-          <i class="fa-solid fa-file-invoice-dollar"></i>
-          <p>Payroll History</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/attendance">
-          <i class="fa-solid fa-clock"></i>
-          <p>Attendance</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/leave/manage">
-          <i class="fa-solid fa-calendar-check"></i>
-          <p>Leave Mgmt</p>
-        </a>
-      </li>
-      
-      <li class="nav-item">
-        <a href="/customers">
-          <i class="fa-solid fa-users-viewfinder"></i>
-          <p>Customers</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/invoices">
-          <i class="fa-solid fa-file-invoice"></i>
-          <p>Invoices</p>
-        </a>
-      </li>
-<li class="nav-item">
-        <a href="/assets/add">
-          <i class="fa-solid fa-box-archive"></i>
-          <p>Add Asset</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/assets/all">
-          <i class="fa-solid fa-boxes-stacked"></i>
-          <p>All Assets</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/ledger/add">
-          <i class="fa-solid fa-book"></i>
-          <p>Ledger Entry</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/ledger/view">
-          <i class="fa-solid fa-book-open"></i>
-          <p>View Ledger</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/ledger/accounts">
-          <i class="fa-solid fa-sitemap"></i>
-          <p>Chart of Accounts</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/ledger/trial-balance">
-          <i class="fa-solid fa-balance-scale"></i>
-          <p>Trial Balance</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/ledger/balance-sheet">
-          <i class="fa-solid fa-file-invoice-dollar"></i>
-          <p>Balance Sheet</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/ledger/profit-loss">
-          <i class="fa-solid fa-money-bill-trend-up"></i>
-          <p>Profit & Loss</p>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="/logout">
-          <i class="fas fa-sign-out-alt"></i>
-          <p>Log Out</p>
-        </a>
-      </li>
-    </ul>
-  </div>
-</div>
-<!-- End Sidebar -->
+		<!-- Sidebar -->
+		<%- include('../partials/sidebar') %>
+		<!-- End Sidebar -->
 
       <div class="main-panel">
         <div class="content">
