--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -152,6 +152,16 @@
                       </button>
                     </div>
                   </div>
+                  <div class="col-12 text-center mt-2">
+                    <p class="mb-0 text-muted">
+                      Are you a Sales Rep?
+                      <a
+                        href="/sales-rep/login"
+                        class="link-primary text-decoration-none fw-bold"
+                        >Login here</a
+                      >
+                    </p>
+                  </div>
                 </div>
               </form>
             </div>
