--- a/views/notifications.ejs
+++ b/views/notifications.ejs
@@ -199,7 +199,107 @@
     </div>
     
 		<!-- Sidebar -->
-		<%- include('partials/sidebar') %>
+		<div class="sidebar">	
+			<div class="sidebar-wrapper">
+				<div class="user">
+					<div class="photo">
+						<img src="/img/profile-icon.png" />
+					</div>
+					<div class="info">
+						<a
+							class=""
+							data-toggle="collapse"
+							href="#collapseExample"
+							aria-expanded="true"
+						>
+							<span>
+								Steven
+								<span class="user-level">Administrator</span>
+								<span class="caret"></span>
+							</span>
+						</a>
+        <div class="clearfix"></div>
+
+        <div class="collapse in" id="collapseExample" aria-expanded="true">
+          <ul class="nav">
+            <li>
+              <a href="#profile">
+                <span class="link-collapse">My Profile</span>
+              </a>
+            </li>
+            <li>
+              <a href="#edit">
+                <span class="link-collapse">Edit Profile</span>
+              </a>
+            </li>
+            <li>
+              <a href="#settings">
+                <span class="link-collapse">Settings</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <ul class="nav">
+					<li class="nav-item">
+						<a href="/admin/dashboard">
+							<i class="fa-solid fa-gauge"></i>
+							<p>Dashboard</p>
+						</a>
+					</li>
+					<li class="nav-item ">
+						<a href="/branch/<%= branch[0].branch_id %>">
+							<i class="fas fa-chart-pie"></i>
+							<p>Branch Overview</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/stock-branch/<%= branch[0].branch_id %>">
+							<i class="fa-solid fa-arrow-trend-up"></i>
+							<p>Stock Branch</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/branch/<%= branch[0].branch_id %>/products">
+							<i class="fa-solid fa-tarp"></i>
+							<p>Branch Products</p>
+							<span class="badge badge-count">
+								<%= products.length %>
+							</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/branch/<%= branch[0].branch_id %>/sales">
+							<i class="fa-solid fa-cart-shopping"></i>
+							<p>Sales</p>
+							<span class="badge badge-count"></span>
+						</a>
+					</li>
+					<li class="nav-item active">
+						<a href="/branch/<%= branch[0].branch_id %>/notifications">
+							<i class="far fa-bell"></i>
+							<p>Notifications</p>
+							<span class="badge badge-count"></span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/branch/<%= branch[0].branch_id %>/transfer-stock">
+							<i class="fa-solid fa-share"></i>
+							<p>Transfer Stock</p>
+							<span class="badge badge-count"></span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/logout">
+							<i class="fas fa-sign-out-alt"></i>
+							<p>Log Out</p>
+						</a>
+					</li>
+
+				</ul>
+  </div>
+</div>
 		<!-- End Sidebar -->
 		
 
@@ -274,9 +374,9 @@
                                     notifications</small>
                               <nav>
                                 <ul class="pagination pagination-sm mb-0">
-                                  <li class="page-item disabled"><a class="page-link" href="#">â€¹</a></li>
+                                  <li class="page-item disabled"><a class="page-link" href="#">&lt;</a></li>
                                   <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                  <li class="page-item disabled"><a class="page-link" href="#">â€º</a></li>
+                                  <li class="page-item disabled"><a class="page-link" href="#">&gt;</a></li>
                                 </ul>
                               </nav>
                             </div>
