--- a/views/admin/request-details.ejs
+++ b/views/admin/request-details.ejs
@@ -108,6 +108,7 @@
                       >
                     </p>
                     <h4 class="mt-3">Total: ₦<%= request.total_amount %></h4>
+                    <!-- Debug: Status is "<%= request.status %>" -->
 
                     <% if(request.status === 'PENDING') { %>
                     <hr />
